@@ -1,5 +1,11 @@
 2005-08-13  Tom Tromey  <tromey@redhat.com>
 
+	* java/util/Collections.java (reverseOrder): New method.
+	(frequency): Likewise.
+	(ReverseComparator): No longer final.
+
+2005-08-13  Tom Tromey  <tromey@redhat.com>
+
 	* java/util/Timer.java (Timer(String)): New constructor.
 	(Timer(String,boolean)): Likewise.
 	(purge): New method.
